leader election works

--- a/EP2400Project2/gradient.cfg
+++ b/EP2400Project2/gradient.cfg
@@ -8,7 +8,11 @@ CYCLON_CACHE_SIZE K
 
 GRADIENT_CACHE_SIZE 10
 
-random.seed 1234567890
+LEADER_DECISION_CYCLES 5
+
+LEADER_DISSEMINATION_TTL 2
+
+random.seed 123456789
 
 simulation.cycles 30
 
@@ -23,6 +27,8 @@ protocol.lnk.shuffle_length CYCLON_SHUFFLE_LENGTH
 protocol.grad edu.kth.ep2400.gradient.Gradient
 protocol.grad.linkable lnk
 protocol.grad.cache GRADIENT_CACHE_SIZE
+protocol.grad.leaderAnnCycles LEADER_DECISION_CYCLES
+protocol.grad.leaderDisseminationTTL LEADER_DISSEMINATION_TTL
 
 init.rnd WireKOut
 init.rnd.protocol lnk
