--- a/trunk/EP2400Project2/gradient.cfg
+++ b/trunk/EP2400Project2/gradient.cfg
@@ -12,7 +12,12 @@ LEADER_DECISION_CYCLES 5
 
 LEADER_DISSEMINATION_TTL 2
 
-random.seed 123456789
+NODE_KILLER_NODES_TO_KILL 5
+NODE_KILLER_START_ROUND 10
+NODE_KILLER_END_ROUND 26
+NODE_KILLER_STEP 8
+
+random.seed 1234567890
 
 simulation.cycles 30
 
@@ -24,7 +29,7 @@ protocol.lnk edu.kth.ep2400.gradient.Cyclon
 protocol.lnk.cache_size CYCLON_CACHE_SIZE
 protocol.lnk.shuffle_length CYCLON_SHUFFLE_LENGTH
 
-protocol.grad edu.kth.ep2400.gradient.Gradient
+protocol.grad edu.kth.ep2400.gradient.Gradient2
 protocol.grad.linkable lnk
 protocol.grad.cache GRADIENT_CACHE_SIZE
 protocol.grad.leaderAnnCycles LEADER_DECISION_CYCLES
@@ -43,5 +48,13 @@ include.init rnd ld
 
 control.gradientObserver edu.kth.ep2400.gradient.GradientObserver
 control.gradientObserver.protocol grad
+
+control.nodeKiller edu.kth.ep2400.gradient.NodeKiller
+control.nodeKiller.numOfNodesToKill NODE_KILLER_NODES_TO_KILL
+control.nodeKiller.startRound NODE_KILLER_START_ROUND
+control.nodeKiller.killStep NODE_KILLER_STEP
+control.nodeKiller.endRound NODE_KILLER_END_ROUND
+
+#include nodeKiller in the controllers to have a dynamic node removal
 
 include.control gradientObserver
