--- a/trunk/EP2400Project2/gradient.cfg
+++ b/trunk/EP2400Project2/gradient.cfg
@@ -14,8 +14,8 @@ LEADER_DISSEMINATION_TTL 2
 
 NODE_KILLER_NODES_TO_KILL 5
 NODE_KILLER_START_ROUND 10
-NODE_KILLER_END_ROUND 26
-NODE_KILLER_STEP 8
+NODE_KILLER_END_ROUND 20
+NODE_KILLER_STEP 5
 
 random.seed 1234567890
 
@@ -57,4 +57,4 @@ control.nodeKiller.endRound NODE_KILLER_END_ROUND
 
 #include nodeKiller in the controllers to have a dynamic node removal
 
-include.control gradientObserver
+include.control gradientObserver nodeKiller
