leader failure is detected and new leader is elected immediately

--- a/EP2400Project2/gradient.cfg
+++ b/EP2400Project2/gradient.cfg
@@ -29,7 +29,7 @@ protocol.lnk edu.kth.ep2400.gradient.Cyclon
 protocol.lnk.cache_size CYCLON_CACHE_SIZE
 protocol.lnk.shuffle_length CYCLON_SHUFFLE_LENGTH
 
-protocol.grad edu.kth.ep2400.gradient.Gradient2
+protocol.grad edu.kth.ep2400.gradient.Gradient3
 protocol.grad.linkable lnk
 protocol.grad.cache GRADIENT_CACHE_SIZE
 protocol.grad.leaderAnnCycles LEADER_DECISION_CYCLES
@@ -54,6 +54,13 @@ control.nodeKiller.numOfNodesToKill NODE_KILLER_NODES_TO_KILL
 control.nodeKiller.startRound NODE_KILLER_START_ROUND
 control.nodeKiller.killStep NODE_KILLER_STEP
 control.nodeKiller.endRound NODE_KILLER_END_ROUND
+
+control.dnet DynamicNetwork
+control.dnet.add -5
+control.dnet.from 10
+control.dnet.until 25
+control.dnet.step 8
+
 
 #include nodeKiller in the controllers to have a dynamic node removal
 
