Message pulling works, in a way:)

--- a/EP2400Project2/gradient.cfg
+++ b/EP2400Project2/gradient.cfg
@@ -49,6 +49,9 @@ include.init rnd ld
 control.gradientObserver edu.kth.ep2400.gradient.GradientObserver
 control.gradientObserver.protocol grad
 
+control.pull edu.kth.ep2400.gradient.UpdatePuller
+control.pull.protocol grad
+
 control.nodeKiller edu.kth.ep2400.gradient.NodeKiller
 control.nodeKiller.numOfNodesToKill NODE_KILLER_NODES_TO_KILL
 control.nodeKiller.startRound NODE_KILLER_START_ROUND
@@ -64,4 +67,4 @@ control.dnet.step 8
 
 #include nodeKiller in the controllers to have a dynamic node removal
 
-include.control gradientObserver nodeKiller
+include.control pull gradientObserver nodeKiller 
