--- a/trunk/EP2400Project2/gradient.cfg
+++ b/trunk/EP2400Project2/gradient.cfg
@@ -1,4 +1,4 @@
-NUM_SERVERS 1000
+NUM_SERVERS 10000
 
 K 20
 
@@ -8,9 +8,7 @@ CYCLON_CACHE_SIZE K
 
 GRADIENT_CACHE_SIZE 10
 
-LEADER_DECISION_CYCLES 5
-
-LEADER_DISSEMINATION_TTL 2
+LEADER_DECISION_CYCLES 7
 
 NODE_KILLER_NODES_TO_KILL 5
 NODE_KILLER_START_ROUND 10
@@ -67,4 +65,4 @@ control.dnet.step 8
 
 #include nodeKiller in the controllers to have a dynamic node removal
 
-include.control pull gradientObserver nodeKiller 
+include.control gradientObserver nodeKiller
