--- a/trunk/EP2400Project2/gradient.cfg
+++ b/trunk/EP2400Project2/gradient.cfg
@@ -1,4 +1,4 @@
-NUM_SERVERS 10000
+NUM_SERVERS 100
 
 K 20
 
@@ -65,4 +65,4 @@ control.dnet.step 8
 
 #include nodeKiller in the controllers to have a dynamic node removal
 
-include.control gradientObserver nodeKiller
+include.control gradientObserver
